# chaos

./: .gitignore  .~lock.presentation.odp#  .~lock.presentation.pptx#  CMakeLists.txt  commit_to_use  presentation.odp
algorithms/bfs/: bfs.hpp
algorithms/pagerank/: pagerank.hpp
algorithms/scan/: in_degree_cnt.hpp  out_degree_cnt.hpp
backup/: backup.sh  clear.sh  deploy_code.sh  deploy_helpers.sh  deploy_xs.sh  gather_logs.sh  gather_partition_details.sh  kill_chaos.sh  run_new_runner.sh
backup/helpers/: bench-run.sh  convert.sh  gen.sh  measure_thr.sh  predate.sh  run.sh  run_xs.sh  zmq-receiver.sh
backup/runner/: clear.sh  config.sh  deploy_code.sh  deploy_grid_partitions.sh  deploy_helpers.sh  deploy_partitioning_files.sh  deploy_vertex_relabeling.sh  deploy_vertex_relabelling.sh  deploy_xs.sh  gather_logs.sh  kill_chaos.sh  run_chaos.sh  runner.sh  vertex_relabeling.py
backup/toolbox/: assemble.sh  assemble_all.sh  assemble_tsv.sh  clean.sh  convert2tsv.sh  countvs.py  deploy_xs2.sh  distribute.sh  distribute_simple.sh  enable_root.sh  fix-xscale-boot.sh  gengraph.py  merge_results.sh  prep_machines.sh  randsplit.py  tsv2xsc.py  tune_stack.sh
backupNewMachines/: backup.sh  backup.sh~  deploy_code.sh  deploy_helpers.sh  deploy_helpers.sh~  deploy_xs.sh~  killall.sh
backupNewMachines/helpers/: zmq-sender.sh
backupNewMachines/runner/: clear.sh  deploy_partitioning_files.sh  deploy_partitioning_files.sh~  gather_logs.sh  gather_logs.sh~  gather_partition_details.sh  gather_partition_details.sh~  gather_vertices_details.sh  gather_vertices_details.sh~  kill_chaos.sh
backupNewMachines/toolbox/: convert2type2.sh  deploy_xs.sh  dir2undir.py  distribute_files.sh  distribute_ini.sh  fill_disk.sh  generate_graphs.sh  grant_root.sh  prep_machines.sh  prep_machines2.sh  prep_machines_giraph.sh  split_file.sh  split_file_8.sh  ssd_deploy_xs.sh  xsc2tsv.py  xsc2type2.py  xsc2und.py
benchmarks/: driver.cpp
core/: autotuner.hpp  core.cpp  sg_driver.hpp  x-lib.hpp  x-splitter.hpp
generators/: erdos-renyi  rmat
logResults/Experiment1/: edgePartitions_8_Machine_141.txt  edgePartitions_8_Machine_142.txt  edgePartitions_8_Machine_143.txt  edgePartitions_8_Machine_144.txt
new_partitions_chaos/: partitions.ini  partitions_rmat24.ini  rmat24Partitions.ini  rmat24_2Partitions.ini  rmat24_4Partitions.ini  rmat28_32_partitions
new_partitions_chaos/partitions/: rmat24_256_new_partitions  rmat24_8_partitions  rmat24_8_partitions_balanced  rmat24_8_partitions_tradeoff  rmat28_16_partitions_directed  (+7 more)
object_files/: block_mem.d  core.d  driver.d  fanout_test.d  slipbench.d
report/: introduction.tex  outils  report.aux  report.dvi  report.tex
results/: .~lock.logResults.ods#  .~lock.s.ods#  .~lock.schema.ods#  BarrierTimeLog.ods  Observations  logResults.ods  results.ods  resultsNoWorkStealing.ods  resultsRMAT28NoWorkStealing.ods  s.ods  schema.ods
slipstore/: interface.hpp  io.hpp  memory_buffer.hpp
utils/: desc_utils.h  options_utils.h  utils.cpp
(+987 files in other folders)
