cmake_minimum_required(VERSION 3.3)
project(chaos)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    algorithms/als/als.hpp
    algorithms/als/als_async.hpp
    algorithms/als/als_graphchi.hpp
    algorithms/als/checkbip.hpp
    algorithms/bc/bc.hpp
    algorithms/belief_propagation/bp.hpp
    algorithms/belief_propagation/bp_graphchi.hpp
    algorithms/belief_propagation/bp_graphchi_new.hpp
    algorithms/bfs/bfs.hpp
    algorithms/bfs/bfs_async.hpp
    algorithms/bfs/bfs_filtered.hpp
    algorithms/bfs/bfs_forest.hpp
    algorithms/bfs/bfs_forest_traced.hpp
    algorithms/bfs/bfs_yahoo.hpp
    algorithms/bfs/bfs_yahoo_count.hpp
    algorithms/cc/cc.hpp
    algorithms/cc/cc_online.hpp
    algorithms/hyper-anf/hyper-anf.hpp
    algorithms/kcores/kcore.hpp
    algorithms/mcst/mcst.hpp
    algorithms/mis/mis.hpp
    algorithms/pagerank/pagerank.hpp
    algorithms/pagerank/pagerank_ddf.hpp
    algorithms/scan/conductance.hpp
        algorithms/scan/out_degree_cnt.hpp
    algorithms/scan/degree_cnt_max.hpp
    algorithms/scan/noop.hpp
    algorithms/scan/range_check.hpp
    algorithms/scan/reverse.hpp
    algorithms/scc/scc.hpp
    algorithms/spmv/spmv.hpp
    algorithms/sssp/sssp.hpp
    algorithms/sssp/sssp_forest.hpp
    algorithms/triangles/triangle_counting.hpp
    algorithms/template.hpp
    benchmarks/driver.cpp
    core/autotuner.hpp
    core/core.cpp
    core/sg_driver.hpp
    core/sg_driver_async.hpp
    core/sg_driver_python.hpp
    core/types.h
    core/x-ingest.hpp
    core/x-lib.hpp
    core/x-splitter.hpp
    format/type_1.hpp
    format/type_2.hpp
    generators/prng/mod_arith.h
    generators/prng/mod_arith_32bit.h
    generators/prng/mod_arith_64bit.h
    generators/prng/mod_arith_xmt.h
    generators/prng/mrg_transitions.c
    generators/prng/splittable_mrg.c
    generators/prng/splittable_mrg.h
    generators/prng/utils.c
    generators/prng/utils.h
    generators/defs.h
    generators/options.cpp
    generators/options.h
    generators/output.cpp
    generators/output.h
    generators/random.cpp
    generators/rmat.cpp
    generators/scramble.h
    generators/util.h
    slipstore/async_direct_io.hpp
    slipstore/checkpoints.hpp
    slipstore/dio_buffer.hpp
    slipstore/dummy_io.hpp
    slipstore/generic_io.hpp
    slipstore/interface.hpp
    slipstore/io.hpp
    slipstore/memory_buffer.hpp
    slipstore/sync_pagecache_io.hpp
    utils/barrier.h
    utils/block_mem.cpp
    utils/boost_log_wrapper.h
    utils/clock.hpp
    utils/clock_utils.h
    utils/desc_utils.h
    utils/fanout_test.cpp
    utils/feeder.cpp
    utils/hyperloglog.h
    utils/mem_speed_random.cpp
    utils/mem_speed_sequential.cpp
    utils/memory_utils.h
    utils/options_utils.h
    utils/per_cpu_data.hpp
    utils/slipbench.cpp
    utils/sort_edges.cpp
    utils/utils.cpp
    utils/zpipe.c)

add_executable(chaos ${SOURCE_FILES})